[package]
name = "ticktock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["json"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
prometheus = "0.13.3"
prometheus_exporter = "0.8"
